--- a/Frontend/src/index.css
+++ b/Frontend/src/index.css
@@ -7,10 +7,13 @@ body {
   -moz-osx-font-smoothing: grayscale;
 }
 main {
-  padding: 1rem;
+  flex: 1;
+}
+.site-container {
+  min-height: 100vh;
 }
 
-header {
+/* header {
   background-color: #404040;
   padding: 1rem;
 }
@@ -18,7 +21,7 @@ header a {
   color: #ffffff;
   font-weight: bold;
   text-decoration: none;
-}
+} */
 .products {
   display: flex;
   flex-wrap: wrap;
