--- a/Frontend/src/index.css
+++ b/Frontend/src/index.css
@@ -54,3 +54,15 @@ i{
   align-items:center;
   gap:20px;
 }
+.small-container {
+  max-width: 600px;
+}
+
+.checkout-steps > div{
+  border-bottom: 0.2rem solid red;
+  color:red
+}
+.checkout-steps > div.active{
+  border-bottom: 0.2rem solid green;
+  color:green
+}
